--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,7 +9,7 @@
 
 body {
     background-color: #121212;
-    background-image: url(/img/bg.png);
+    background-image: url(../src/img/bg.png);
     display: flex;
     justify-content: center;
     align-items: center;
